| Bug #31883 | mysql_upgrade: --help displays options out of order | ||
|---|---|---|---|
| Submitted: | 26 Oct 2007 15:14 | Modified: | 18 Jun 2009 15:01 |
| Reporter: | Paul DuBois | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Command-line Clients | Severity: | S3 (Non-critical) |
| Version: | 5.0 and up | OS: | Any |
| Assigned to: | Jim Winstead | CPU Architecture: | Any |
[26 Oct 2007 15:15]
Paul DuBois
mysqltest.c has a similar problem.
[26 Oct 2007 15:40]
MySQL Verification Team
Thank you for the bug report.
[28 Apr 2009 18:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/72939 2881 Jim Winstead 2009-04-28 Make SSL options appear in correct place in mysql_upgrade and mysqltest usage information. (Bug #31883) modified: client/mysql_upgrade.c client/mysqltest.cc
[5 May 2009 18:03]
Jim Winstead
Queued to 5.1-bugteam and 6.0-bugteam.
[28 May 2009 8:17]
Bugs System
Pushed into 5.1.36 (revid:joro@sun.com-20090528073639-yohsb4q1jzg7ycws) (version source revid:mats@sun.com-20090511132802-nnkiyb2huih1tklz) (merge vers: 5.1.35) (pib:6)
[29 May 2009 1:24]
Paul DuBois
Cosmetic change. No changelog entry needed. Setting report to NDI pending push into 6.0.x.
[17 Jun 2009 19:24]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090616183122-chjzbaa30qopdra9) (version source revid:jimw@mysql.com-20090505173706-9ze3q4qzngw8kt2b) (merge vers: 6.0.12-alpha) (pib:11)
[18 Jun 2009 15:01]
Paul DuBois
Cosmetic change. No changelog entry needed.
[26 Aug 2009 13:46]
Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[26 Aug 2009 13:46]
Bugs System
Pushed into 5.1.37-ndb-6.3.27 (revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (version source revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (merge vers: 5.1.37-ndb-6.3.27) (pib:11)
[26 Aug 2009 13:48]
Bugs System
Pushed into 5.1.37-ndb-6.2.19 (revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (version source revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (merge vers: 5.1.37-ndb-6.2.19) (pib:11)
[27 Aug 2009 16:33]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20090827163030-6o3kk6r2oua159hr) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)

Description: mysql_upgrade --help displays the SSL options between the --user and --verbose option, not between the --socket and --user options. How to repeat: Run "mysql_upgrade --help". Suggested fix: ===== mysql_upgrade.c 1.28 vs edited ===== --- 1.28/client/mysql_upgrade.c 2007-10-08 21:30:39 -05:00 +++ edited/mysql_upgrade.c 2007-10-26 10:08:53 -05:00 @@ -105,9 +105,9 @@ #endif {"socket", 'S', "Socket file to use for connection.", 0, 0, 0, GET_STR, REQUIRED_ARG, 0, 0, 0, 0, 0, 0}, +#include <sslopt-longopts.h> {"user", 'u', "User for login if not current user.", (gptr*) &opt_user, (gptr*) &opt_user, 0, GET_STR, REQUIRED_ARG, 0, 0, 0, 0, 0, 0}, -#include <sslopt-longopts.h> {"verbose", 'v', "Display more output about the process", (gptr*) &opt_verbose, (gptr*) &opt_verbose, 0, GET_BOOL, NO_ARG, 1, 0, 0, 0, 0, 0},