Make SSL options appear in correct place in mysql_upgrade and mysqltest usage information. (Bug #31883)